tests/resources/invalid/type/error/using_old_resource_in_with.mamba
def old <- 10

with old as new do
    print old + 10